Testing on heroku. Trying to use JAWSDB

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MYSQL_PASS='Ngoc513*'
 MYSQL_DB='burger_db'
 MYSQL_USER='root'
+JAWSDB_URL='mysql://z0a92sjbp08xynjz:psg1gkip47e5452r@x3ztd854gaa7on6s.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/vjkv6axkxksvi3ky'
